--- a/index.html
+++ b/index.html
@@ -2,15 +2,6 @@
 <html lang="en">
 
 <head>
-    <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-BN5JC7B3SH"></script>
-    <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag() { dataLayer.push(arguments); }
-        gtag('js', new Date());
-
-        gtag('config', 'G-BN5JC7B3SH');
-    </script>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=2, user-scalable=yes">
@@ -66,8 +57,8 @@
     <nav class="navbar">
         <div class="max-width">
             <div class="logo">
-                <a href="#">
-                    ellow<span>tech.</span>
+                <a href="https://ellowdigitals.netlify.app/">
+                    ellow<span>digitals.</span>
                 </a>
             </div>
             <!--Portfo<span>lio-->
@@ -113,10 +104,10 @@
     <!-- about section start -->
     <section class="about" id="about">
         <div class="max-width">
-            <h2 class="title">About me</h2>
+            <h2 class="title">About Me</h2>
             <div class="about-content">
                 <div class="column left">
-                    <img src="assests/images/profile.webp" alt="Sarwan Yadav">
+                    <img src="assests\images\profile.webp" alt="Sarwan Yadav">
                 </div>
                 <div class="column right">
                     <div class="text">
@@ -124,32 +115,23 @@
                         <span class="typing-2"></span>
                     </div>
                     <p>
-                        I am an 11th-grade student hailing from India with a
-                        deep-seated
-                        passion for coding. My unwavering dedication towards
-                        continually
-                        improving my programming language skills and
-                        techniques enables me
-                        to craft exceptional and inventive projects that
-                        demonstrate my
-                        creativity and proficiency. I have successfully
-                        created a myriad
-                        of software programs, websites, and apps that
-                        exemplify my
-                        expertise. As a diligent and committed individual, I
-                        consistently
-                        go above and beyond to achieve my objectives. Thank
-                        you for taking
-                        the time to visit my portfolio, and I am eagerly
-                        looking forward
-                        to exploring potential opportunities to collaborate
-                        with you.
+                        I am an 11th-grade student from India with a deep-seated passion for coding. My unwavering
+                        dedication to continually improving my programming skills and techniques enables me to craft
+                        exceptional and inventive projects that demonstrate my creativity and proficiency. I have
+                        successfully created a myriad of software programs, websites, and apps that exemplify my
+                        expertise. As a diligent and committed individual, I consistently go above and beyond to achieve
+                        my objectives. Thank you for taking the time to visit my portfolio, and I eagerly look forward
+                        to exploring potential opportunities to collaborate with you.
                     </p>
-                    <!--<a href="#">Download CV</a>-->
+                    <br>
+                    <p>
+                        I am also a proud member of<a href="https://ellowdigitals.netlify.app/">EllowDigitals</a>.
+                    </p>
                 </div>
             </div>
         </div>
     </section>
+
     <!-- services section start -->
     <section class="services" id="services">
         <div class="max-width">
@@ -370,7 +352,7 @@
             Created By
             <a href="#home">Sarwan Yadav</a>
             |
-            <span class="far fa-copyright"></span> 2023 All rights reserved.</span>
+            <span class="far fa-copyright"></span> 2024 All rights reserved.</span>
     </footer>
     <script src="assests/js/script.js"></script>
 </body>
