--- a/redict/thanks.html
+++ b/redict/thanks.html
@@ -2,15 +2,15 @@
 <html lang="en">
 
 <head>
-  <meta http-equiv="refresh" content="4;url=https://sarwan6174.github.io//sarwan6174/" />
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta http-equiv="refresh" content="4;url=https://sarwan6174.github.io/sarwan6174/" />
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=2, user-scalable=yes">
   <meta name="description" content="Sarwan Yadav Personal Portfolio Website">
   <meta name="keywords" content="Portfolio, Sarwan Portfolio, Sarwan Yadav">
   <meta name="author" content="Sarwan Yadav">
-  <meta name="theme-color" content="#RRGGBB">
-  <meta name="content-language" content="en-US">
+  <meta name="theme-color" content="#256cdf">
+  <meta http-equiv="content-language" content="en-US">
 
   <title>Sending Mail</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css" />
@@ -92,55 +92,50 @@
       opacity: 0.6;
     }
 
-    .mail-animation span:nth-child(2) {
+    .mail-animation span:nth-child(2),
+    .mail-animation span:nth-child(3),
+    .mail-animation span:nth-child(4) {
       width: 100%;
       height: 100%;
       border: 5px solid #256cdf;
+    }
+
+    .mail-animation span:nth-child(2) {
       opacity: 0.4;
       animation-delay: 0.25s;
     }
 
     .mail-animation span:nth-child(3) {
-      width: 100%;
-      height: 100%;
-      border: 5px solid #256cdf;
       opacity: 0.2;
       animation-delay: 0.5s;
     }
 
     .mail-animation span:nth-child(4) {
-      width: 100%;
-      height: 100%;
-      border: 5px solid #256cdf;
       opacity: 0.1;
       animation-delay: 0.75s;
     }
 
     @keyframes mail-bounce {
-      0% {
-        transform: translateY(0px);
+
+      0%,
+      100% {
+        transform: translateY(0);
       }
 
       50% {
         transform: translateY(-20px);
       }
-
-      100% {
-        transform: translateY(0px);
-      }
     }
 
     @keyframes envelope-flap {
-      0% {
+
+      0%,
+      100% {
         transform: rotate(-20deg);
       }
 
       50% {
         transform: rotate(20deg);
-      }
-
-      100% {
-        transform: rotate(-20deg);
       }
     }
 
@@ -154,18 +149,19 @@
       }
     }
 
-    @media only screen and (max-width: 768px) {
+    /* Responsive Styles */
+    @media (max-width: 768px) {
       .sending-mail-container h2 {
         font-size: 24px;
       }
 
-      .sending-mail-container .mail-animation {
+      .mail-animation {
         width: 80px;
         height: 80px;
         margin-top: 15px;
       }
 
-      .sending-mail-container .mail-animation .mail-envelope {
+      .mail-envelope {
         top: 15px;
         left: 15px;
         width: 50px;
@@ -173,54 +169,48 @@
         border-width: 3px;
       }
 
-      .sending-mail-container .mail-animation .mail-stamp {
+      .mail-stamp {
         top: 20px;
         left: 35px;
         width: 12px;
         height: 12px;
       }
 
-      .sending-mail-container .mail-animation span:nth-child(1) {
+      .mail-animation span:nth-child(1) {
         opacity: 0.4;
       }
 
-      .sending-mail-container .mail-animation span:nth-child(2) {
+      .mail-animation span:nth-child(2) {
         border-width: 3px;
         opacity: 0.3;
         animation-delay: 0.2s;
       }
 
-      .sending-mail-container .mail-animation span:nth-child(3) {
+      .mail-animation span:nth-child(3) {
         border-width: 3px;
         opacity: 0.1;
         animation-delay: 0.4s;
       }
 
-      .sending-mail-container .mail-animation span:nth-child(3) {
-        border-width: 3px;
-        opacity: 0.1;
-        animation-delay: 0.4s;
-      }
-
-      .sending-mail-container .mail-animation span:nth-child(4) {
+      .mail-animation span:nth-child(4) {
         border-width: 3px;
         opacity: 0.05;
         animation-delay: 0.6s;
       }
     }
 
-    @media only screen and (max-width: 480px) {
+    @media (max-width: 480px) {
       .sending-mail-container h2 {
         font-size: 20px;
       }
 
-      .sending-mail-container .mail-animation {
+      .mail-animation {
         width: 60px;
         height: 60px;
         margin-top: 10px;
       }
 
-      .sending-mail-container .mail-animation .mail-envelope {
+      .mail-envelope {
         top: 10px;
         left: 10px;
         width: 40px;
@@ -228,30 +218,30 @@
         border-width: 2px;
       }
 
-      .sending-mail-container .mail-animation .mail-stamp {
+      .mail-stamp {
         top: 15px;
         left: 25px;
         width: 10px;
         height: 10px;
       }
 
-      .sending-mail-container .mail-animation span:nth-child(1) {
+      .mail-animation span:nth-child(1) {
         opacity: 0.3;
       }
 
-      .sending-mail-container .mail-animation span:nth-child(2) {
+      .mail-animation span:nth-child(2) {
         border-width: 2px;
         opacity: 0.2;
         animation-delay: 0.15s;
       }
 
-      .sending-mail-container .mail-animation span:nth-child(3) {
+      .mail-animation span:nth-child(3) {
         border-width: 2px;
         opacity: 0.1;
         animation-delay: 0.3s;
       }
 
-      .sending-mail-container .mail-animation span:nth-child(4) {
+      .mail-animation span:nth-child(4) {
         border-width: 2px;
         opacity: 0.05;
         animation-delay: 0.45s;
@@ -267,6 +257,11 @@
         <div class="mail-flap"></div>
         <div class="mail-stamp"></div>
       </div>
+      <!-- Optional decorative ripple effect -->
+      <span></span>
+      <span></span>
+      <span></span>
+      <span></span>
     </div>
     <h2>Sending Mail...</h2>
   </div>
