--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=2, user-scalable=yes" />
 
-    <!-- Primary Meta Tags -->
     <title>Sarwan Yadav – Full Stack Developer & Designer Portfolio</title>
+
+    <!-- Primary Meta Tags -->
     <meta name="title" content="Sarwan Yadav – Full Stack Developer & Designer Portfolio" />
     <meta name="description"
         content="Explore Sarwan Yadav’s professional portfolio showcasing skills in web development, design, and projects. Available for freelance & full-time opportunities." />
@@ -17,74 +18,63 @@
     <meta name="robots" content="index, follow" />
     <meta name="language" content="English" />
 
-    <!-- Open Graph / Facebook -->
+    <!-- Open Graph / Facebook Meta -->
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://sarwan6174.github.io/sarwan6174/" />
+    <meta property="og:url" content="https://sarwan.netlify.app/" />
     <meta property="og:title" content="Sarwan Yadav – Full Stack Developer Portfolio" />
     <meta property="og:description"
         content="Discover the projects and skills of Sarwan Yadav, a passionate developer and designer." />
-    <meta property="og:image" content="https://sarwan6174.github.io/sarwan6174/assets/images/og-image.jpg" />
+    <meta property="og:image" content="https://sarwan.netlify.app/assets/images/og-image.jpg" />
 
-    <!-- Twitter -->
+    <!-- Twitter Card Meta -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:url" content="https://sarwan6174.github.io/sarwan6174/" />
+    <meta name="twitter:url" content="https://sarwan.netlify.app/" />
     <meta name="twitter:title" content="Sarwan Yadav – Full Stack Developer Portfolio" />
     <meta name="twitter:description" content="Discover the work and creativity of Sarwan Yadav." />
-    <meta name="twitter:image" content="https://sarwan6174.github.io/sarwan6174/assets/images/og-image.jpg" />
+    <meta name="twitter:image" content="https://sarwan.netlify.app/assets/images/og-image.jpg" />
 
-    <!-- Preconnects for performance -->
+    <!-- Preconnect for Performance -->
     <link rel="preconnect" href="https://cdnjs.cloudflare.com" crossorigin />
     <link rel="preconnect" href="https://code.jquery.com" crossorigin />
     <link rel="preconnect" href="https://api.mapbox.com" crossorigin />
-    <link rel="preconnect" href="https://sarwan6174.github.io" crossorigin />
+    <link rel="preconnect" href="https://sarwan.netlify.app" crossorigin />
 
-    <!-- Preload Key Assets for better performance -->
+    <!-- Preload Critical Resources -->
     <link rel="preload" href="assets/css/style.css" as="style" />
-    <link rel="preload" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css"
-        as="style" />
     <link rel="preload" href="assets/js/script.js" as="script" />
+
+    <!-- OwlCarousel CSS (Fixed Integrity Issue) -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css"
+        integrity="sha512-bPs7Ae6pVvhOSiIcyUClR7/q2OAsRiovw4vAkX+zJbw3ShAeeqezq50RIIcIURq7Oa20rW2n2q+fyXBNcU9lrw=="
+        crossorigin="anonymous" />
 
     <!-- Stylesheets -->
     <link rel="stylesheet" href="assets/css/style.css" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css"
-        integrity="sha512-tS3S5qG0BlhnQROyJXvNjeEM4UpMXHrQfTGmbQ1gKmelCxlSEBUaxhRBj/EFTzpbP4RVSrpEikbmdJobCvhE3g=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <!-- Scripts -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/js/all.min.js"
-        integrity="sha512-fD9DI5bZwQxOi7MhYWnnNPlvXdp/2Pj3XSTRrFs5FQa4mizyGLnJcN6tuvUS6LbmgN1ut+XGSABKvjN0H6Aoow=="
-        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
-    <!-- Favicon -->
+    <!-- Favicons -->
     <link rel="icon" href="assets/favicon/favicon.ico" type="image/x-icon" />
-
-    <!-- Standard Favicons -->
     <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png" />
     <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png" />
     <link rel="icon" type="image/png" sizes="96x96" href="assets/favicon/favicon-96x96.png" />
     <link rel="icon" type="image/png" sizes="192x192" href="assets/favicon/android-chrome-192x192.png" />
     <link rel="icon" type="image/png" sizes="512x512" href="assets/favicon/android-chrome-512x512.png" />
 
-    <!-- PWA App Icons (from site.webmanifest) -->
-    <link rel="icon" type="image/png" sizes="192x192" href="assets/favicon/web-app-manifest-192x192.png" />
-    <link rel="icon" type="image/png" sizes="512x512" href="assets/favicon/web-app-manifest-512x512.png" />
-
     <!-- Apple Touch Icon -->
     <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/apple-touch-icon.png" />
 
-    <!-- Manifest for PWA -->
+    <!-- PWA Manifest -->
     <link rel="manifest" href="assets/favicon/site.webmanifest" />
 
-    <!-- Safari pinned tab -->
+    <!-- Safari Pinned Tab -->
     <link rel="mask-icon" href="assets/favicon/favicon.svg" color="#0011ff" />
 
-    <!-- Microsoft Tiles -->
-    <meta name="msapplication-TileColor" content="#0011ff" />
+    <!-- Theme Color -->
     <meta name="theme-color" content="#ffffff" />
+    <meta name="msapplication-TileColor" content="#0011ff" />
     <meta name="apple-mobile-web-app-title" content="Sarwan Yadav" />
     <meta name="application-name" content="Sarwan Yadav" />
     <meta name="msapplication-tooltip" content="Sarwan Yadav – Full Stack Developer Portfolio" />
-    <meta name="msapplication-starturl" content="https://sarwan6174.github.io/sarwan6174/" />
-
+    <meta name="msapplication-starturl" content="https://sarwan.netlify.app/" />
 </head>
 
 <body>
@@ -133,12 +123,16 @@
                     <img src="assets/images/profile.webp" alt="Sarwan Yadav" />
                 </div>
                 <div class="column right">
-                    <div class="text">I'm Sarwan and I'm a <span class="typing-2"></span></div>
-                    <p>I am a 12th-grade student from India with a passion for coding. My goal is to build creative and
-                        efficient projects, including websites, apps, and software programs. I'm the founder of <a
-                            href="https://ellowdigitals.me/" target="_blank"
-                            rel="noopener noreferrer">EllowDigitals</a>, a digital agency committed to delivering
-                        innovative solutions.</p>
+                    <div class="text">
+                        I'm Sarwan and I'm a <span class="typing-2"></span>
+                    </div>
+                    <p>
+                        I am a 12th-grade student from India with a passion for coding. My
+                        goal is to build creative and efficient projects, including
+                        websites, apps, and software programs. I'm the founder of
+                        <a href="https://ellowdigitals.me/" target="_blank" rel="noopener noreferrer">EllowDigitals</a>,
+                        a digital agency committed to delivering innovative solutions.
+                    </p>
                 </div>
             </div>
         </div>
@@ -153,21 +147,30 @@
                     <div class="box">
                         <i class="fas fa-paint-brush"></i>
                         <div class="text">Web Design</div>
-                        <p>Beautiful, responsive, and custom-designed websites tailored to your brand.</p>
+                        <p>
+                            Beautiful, responsive, and custom-designed websites tailored to
+                            your brand.
+                        </p>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
                         <i class="fas fa-code"></i>
                         <div class="text">Web Development</div>
-                        <p>Modern and scalable web applications built with performance and UX in mind.</p>
+                        <p>
+                            Modern and scalable web applications built with performance and
+                            UX in mind.
+                        </p>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
                         <i class="fas fa-desktop"></i>
                         <div class="text">App Development</div>
-                        <p>Creating efficient desktop apps for Windows and Android platforms.</p>
+                        <p>
+                            Creating efficient desktop apps for Windows and Android
+                            platforms.
+                        </p>
                     </div>
                 </div>
             </div>
@@ -181,9 +184,12 @@
             <div class="skills-content">
                 <div class="column left">
                     <div class="text">My creative skills & experiences</div>
-                    <p>I specialize in HTML (90%), CSS (60%), JavaScript (40%), PHP (25%), Python (75%), and MySQL
-                        (70%). These skills have helped me bring various projects to life and continue growing as a
-                        developer.</p>
+                    <p>
+                        I specialize in HTML (90%), CSS (60%), JavaScript (40%), PHP
+                        (25%), Python (75%), and MySQL (70%). These skills have helped me
+                        bring various projects to life and continue growing as a
+                        developer.
+                    </p>
                 </div>
                 <div class="column right">
                     <div class="bars">
@@ -293,8 +299,9 @@
                         <input type="hidden" name="_next"
                             value="https://sarwan6174.github.io/sarwan6174/redict/thanks.html" />
                         <div class="button">
-                            <button type="submit" aria-label="Send message">Send Message <i
-                                    class="fas fa-paper-plane"></i></button>
+                            <button type="submit" aria-label="Send message">
+                                Send Message <i class="fas fa-paper-plane"></i>
+                            </button>
                         </div>
                     </form>
                 </div>
@@ -306,37 +313,31 @@
     <!-- footer section start -->
     <footer>
         <span>
-            © 2024 All rights reserved |
-            Created by <a href="#home">Sarwan Yadav</a> |
-            Designed & Maintained by
+            © 2024 All rights reserved | Created by
+            <a href="#home">Sarwan Yadav</a> | Designed & Maintained by
             <a href="https://ellowdigitals.netlify.app/" target="_blank" rel="noopener noreferrer">
                 EllowDigitals
             </a>
         </span>
     </footer>
 
-    <!-- Service Worker -->
-    <script>
-        if ('serviceWorker' in navigator) {
-            navigator.serviceWorker.register('/service-worker.js')
-                .then(registration => {
-                    console.log('Service Worker registered with scope:', registration.scope);
-                })
-                .catch(error => {
-                    console.error('Service Worker registration failed:', error);
-                });
-        }
-
-    </script>
-
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.11/typed.min.js"></script>
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/3.0.0/noframework.waypoints.min.js"
         integrity="sha512-lzIDzaYCox5oeC0ymj6ho5fRdMrCYkhHfVEm3fySZStdwG85y9SxTcIFYYEUiW1KYbkfiInVFkGofRlYlkHgLw=="
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+
+    <!-- OwlCarousel JS -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"
         integrity="sha512-bPs7Ae6pVvhOSiIcyUClR7/q2OAsRiovw4vAkX+zJbw3ShAeeqezq50RIIcIURq7Oa20rW2n2q+fyXBNcU9lrw=="
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <!-- FontAwesome -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/js/all.min.js"
+        integrity="sha512-fD9DI5bZwQxOi7MhYWnnNPlvXdp/2Pj3XSTRrFs5FQa4mizyGLnJcN6tuvUS6LbmgN1ut+XGSABKvjN0H6Aoow=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" defer></script>
+
     <script src="assets/js/script.js"></script>
 </body>
 
